# ftl_save_manager

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: ftldata.rs  main.rs  update.rs
src/support/: mod.rs
