[package]
name = "ftlsavemanager"
version = "0.1.9"
edition = "2018"
description = "Manage FTL save games"


[package.metadata.bundle]
identifier = "com.github.woelper.ftlsavemanager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "*"
glium = { version = "0.29", default-features = true }
image = "0.23"
imgui = "0.7"
imgui-glium-renderer = "0.7"
imgui-winit-support = "0.7"
self_update = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "*"
anyhow = "*"
positioned-io = "*"
byteorder = "*"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
