[package]
name = "ftlsavemanager"
version = "0.1.11"
edition = "2018"
description = "Manage FTL save games"


[package.metadata.bundle]
identifier = "com.github.woelper.ftlsavemanager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
glium = { version = "0.29", default-features = true }
image = "0.23"
imgui = "0.7"
imgui-glium-renderer = "0.7"
imgui-winit-support = "0.7"
self_update = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.41"
positioned-io = "0.2.2"
byteorder = "1.4.3"
chrono-humanize = "0.2.1"
chrono = "0.4.19"
open = "5.3.1"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
